--- a/app/src/main/res/drawable-xxhdpi/yellow_circle.xml
+++ b/app/src/main/res/drawable-xxhdpi/yellow_circle.xml
@@ -3,13 +3,13 @@
        android:shape="oval"
        android:thicknessRatio="2"
        android:useLevel="false">
-    <solid android:color="#ffffff"/>
+    <solid android:color="#e1d721"/>
 
     <stroke
-        android:width="2dp"
-        android:color="#418635"/>
+        android:width="1dp"
+        android:color="#e1d721"/>
 
     <size
-        android:width="50dp"
-        android:height="50dp"/>
+        android:width="30dp"
+        android:height="30dp"/>
 </shape>
