--- a/app/src/main/res/drawable/round_rect.xml
+++ b/app/src/main/res/drawable/round_rect.xml
@@ -1,10 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="1dp"
-        android:color="@color/green"/>
+        android:width="2dp"
+        android:color="#418635"/>
     <solid
-        android:color="@color/white"/>
+        android:color="#ffffff"/>
     <corners
         android:bottomLeftRadius="0dp"
         android:radius="30dp"
