--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -91,9 +91,11 @@
                             android:id="@+id/textViewPoints"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_marginStart="0dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="4dp"
                             android:background="@drawable/round_rect"
+                            android:gravity="center"
                             android:paddingBottom="12dp"
                             android:paddingEnd="20dp"
                             android:paddingStart="20dp"
@@ -145,6 +147,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/imageViewIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -332,6 +335,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/textViewQuestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -344,29 +348,34 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="30dp"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="30dp"
                         android:gravity="center"
                         android:orientation="horizontal">
 
                         <RelativeLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
+                            android:layout_weight="1"
                             android:background="@drawable/answer_round_rect"
                             android:onClick='@{()->activity.onClickAnswer(1)}'>
 
                             <TextView
+                                android:id="@+id/textViewAnswerA"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
+                                android:gravity="center"
+                                android:singleLine="true"
+                                android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
                                 android:text="Answer"
                                 android:textColor="@color/red"
-                                android:textSize="14dp"
+                                android:textSize="12dp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -380,27 +389,28 @@
                                 android:textStyle="bold" />
                         </RelativeLayout>
 
-                        <TextView
+                        <RelativeLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
                             android:layout_margin="8dp"
+                            android:layout_weight="1"
                             android:background="@drawable/answer_round_rect"
                             android:onClick='@{()->activity.onClickAnswer(2)}'>
 
                             <TextView
+                                android:id="@+id/textViewAnswerB"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
+                                android:gravity="center"
+                                android:singleLine="true"
+                                android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
                                 android:text="Answer"
-                                android:textColor="@color/red" />
+                                android:textColor="@color/red"
+                                android:textSize="12dp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -418,28 +428,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
-                        android:layout_marginEnd="30dp"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="20dp"
                         android:gravity="center"
                         android:orientation="horizontal">
 
                         <RelativeLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
+                            android:layout_weight="1"
                             android:background="@drawable/answer_round_rect"
                             android:onClick='@{()->activity.onClickAnswer(3)}'>
 
                             <TextView
+                                android:id="@+id/textViewAnswerC"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
+                                android:gravity="center"
+                                android:singleLine="true"
+                                android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
                                 android:text="Answer"
-                                android:textColor="@color/red" />
+                                android:textColor="@color/red"
+                                android:textSize="12dp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -452,27 +468,29 @@
                                 android:textStyle="bold" />
                         </RelativeLayout>
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
 
                         <RelativeLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
+                            android:layout_weight="1"
                             android:background="@drawable/answer_round_rect"
                             android:onClick='@{()->activity.onClickAnswer(4)}'>
 
                             <TextView
+                                android:id="@+id/textViewAnswerD"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
+                                android:gravity="center"
+                                android:singleLine="true"
+                                android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
                                 android:text="Answer"
-                                android:textColor="@color/red" />
+                                android:textColor="@color/red"
+                                android:textSize="12dp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
