--- a/app/src/main/res/drawable-xxhdpi/yellow_circle.xml
+++ b/app/src/main/res/drawable-xxhdpi/yellow_circle.xml
@@ -3,11 +3,11 @@
        android:shape="oval"
        android:thicknessRatio="2"
        android:useLevel="false">
-    <solid android:color="#e1d721"/>
+    <solid android:color="#e1ae17"/>
 
     <stroke
         android:width="1dp"
-        android:color="#e1d721"/>
+        android:color="#e1ae17"/>
 
     <size
         android:width="30dp"
