--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -5,15 +5,15 @@
 
         <variable
             name="activity"
-            type="com.sriharilabs.harisharan.quiz.activity.PlayActivity" />
+            type="com.sriharilabs.harisharan.quiz.activity.PlayActivity"/>
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg"
-        tools:context="com.sriharilabs.harisharan.quiz.activity.PlayActivity">
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bg"
+                    tools:context="com.sriharilabs.harisharan.quiz.activity.PlayActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 android:text="Logo"
                 android:textColor="@color/white"
                 android:textSize="30dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
                     android:layout_marginStart="45dp"
                     android:text="POINTS"
                     android:textColor="@color/white"
-                    android:textSize="10dp" />
+                    android:textSize="10dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
                     android:layout_marginStart="12dp"
                     android:text="LIFE"
                     android:textColor="@color/white"
-                    android:textSize="10dp" />
+                    android:textSize="10dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -85,7 +85,7 @@
                             android:text="0"
                             android:textColor="@color/green"
                             android:textSize="14dp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"/>
 
                         <TextView
                             android:id="@+id/textViewPoints"
@@ -103,7 +103,7 @@
                             android:text="0"
                             android:textColor="@color/green"
                             android:textSize="14dp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"/>
 
 
                         <RelativeLayout
@@ -116,7 +116,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
                                 android:padding="10dp"
-                                android:src="@drawable/person_icon" />
+                                android:src="@drawable/person_icon"/>
 
                         </RelativeLayout>
 
@@ -133,7 +133,7 @@
                     android:text="Time : 30"
                     android:textColor="@color/white"
                     android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -151,8 +151,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:padding="30dp"
-                    android:src="@mipmap/ic_launcher_round" />
+                    android:padding="30dp"/>
             </LinearLayout>
 
             <android.support.v7.widget.CardView
@@ -180,7 +179,7 @@
                         android:text="GUESS THE LOGO?"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -204,7 +203,7 @@
                                 android:layout_marginStart="30dp"
                                 android:paddingEnd="12dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer" />
+                                android:text="Answer"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -214,13 +213,13 @@
                                 android:gravity="center"
                                 android:text="A"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"/>
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
@@ -235,7 +234,7 @@
                                 android:layout_marginStart="30dp"
                                 android:paddingEnd="12dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer" />
+                                android:text="Answer"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -245,7 +244,7 @@
                                 android:gravity="center"
                                 android:text="B"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
                     </LinearLayout>
 
@@ -272,7 +271,7 @@
                                 android:layout_marginStart="30dp"
                                 android:paddingEnd="12dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer" />
+                                android:text="Answer"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -282,13 +281,13 @@
                                 android:gravity="center"
                                 android:text="C"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"/>
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
@@ -303,7 +302,7 @@
                                 android:layout_marginStart="30dp"
                                 android:paddingEnd="12dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer" />
+                                android:text="Answer"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -313,7 +312,7 @@
                                 android:gravity="center"
                                 android:text="D"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
                     </LinearLayout>
                 </LinearLayout>
@@ -343,7 +342,7 @@
                         android:text="GUESS THE LOGO?"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -355,6 +354,7 @@
                         android:orientation="horizontal">
 
                         <RelativeLayout
+                            android:id="@+id/relativeLayoutA"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
@@ -369,14 +369,14 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
                                 android:gravity="center"
-                                android:singleLine="true"
                                 android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer"
+                                android:singleLine="true"
+                                android:text=""
                                 android:textColor="@color/red"
                                 android:textSize="12dp"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -386,10 +386,11 @@
                                 android:gravity="center"
                                 android:text="A"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
 
                         <RelativeLayout
+                            android:id="@+id/relativeLayoutB"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
@@ -404,13 +405,14 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
                                 android:gravity="center"
-                                android:singleLine="true"
                                 android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer"
+                                android:singleLine="true"
+                                android:text=""
                                 android:textColor="@color/red"
-                                android:textSize="12dp" />
+                                android:textSize="12dp"
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -420,7 +422,7 @@
                                 android:gravity="center"
                                 android:text="B"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
                     </LinearLayout>
 
@@ -435,6 +437,7 @@
                         android:orientation="horizontal">
 
                         <RelativeLayout
+                            android:id="@+id/relativeLayoutC"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
@@ -449,13 +452,14 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
                                 android:gravity="center"
-                                android:singleLine="true"
                                 android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer"
+                                android:singleLine="true"
+                                android:text=""
                                 android:textColor="@color/red"
-                                android:textSize="12dp" />
+                                android:textSize="12dp"
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -465,11 +469,11 @@
                                 android:gravity="center"
                                 android:text="C"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
 
-
                         <RelativeLayout
+                            android:id="@+id/relativeLayoutD"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
@@ -484,13 +488,14 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
                                 android:gravity="center"
-                                android:singleLine="true"
                                 android:padding="5dp"
                                 android:paddingEnd="20dp"
                                 android:paddingStart="8dp"
-                                android:text="Answer"
+                                android:singleLine="true"
+                                android:text=""
                                 android:textColor="@color/red"
-                                android:textSize="12dp" />
+                                android:textSize="12dp"
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -500,7 +505,7 @@
                                 android:gravity="center"
                                 android:text="D"
                                 android:textColor="@color/white"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
                         </RelativeLayout>
                     </LinearLayout>
                 </LinearLayout>
